// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot stores new snapshots on the first run 1`] = `
Test Suites: 2 passed, 2 total
Tests:       5 passed, 5 total
Snapshots:   5 written, 5 total
Time:        <<REPLACED>>
Ran all test suites.
`;

exports[`Snapshot works with escaped characters 1`] = `
Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   1 written, 1 total
Time:        <<REPLACED>>
Ran all test suites matching /snapshot.test.js/i.
`;

exports[`Snapshot works with escaped characters 2`] = `
Test Suites: 1 passed, 1 total
Tests:       2 passed, 2 total
Snapshots:   1 written, 1 passed, 2 total
Time:        <<REPLACED>>
Ran all test suites matching /snapshot.test.js/i.
`;

exports[`Snapshot works with escaped characters 3`] = `
Test Suites: 1 passed, 1 total
Tests:       2 passed, 2 total
Snapshots:   2 passed, 2 total
Time:        <<REPLACED>>
Ran all test suites matching /snapshot.test.js/i.
`;

exports[`Snapshot works with escaped regex 1`] = `
Test Suites: 1 passed, 1 total
Tests:       2 passed, 2 total
Snapshots:   2 written, 2 total
Time:        <<REPLACED>>
Ran all test suites matching /snapshotEscapeRegex.js/i.
`;

exports[`Snapshot works with escaped regex 2`] = `
Test Suites: 1 passed, 1 total
Tests:       2 passed, 2 total
Snapshots:   2 passed, 2 total
Time:        <<REPLACED>>
Ran all test suites matching /snapshotEscapeRegex.js/i.
`;

exports[`Snapshot works with template literal substitutions 1`] = `
Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   1 written, 1 total
Time:        <<REPLACED>>
Ran all test suites matching /snapshotEscapeSubstitution.test.js/i.
`;

exports[`Snapshot works with template literal substitutions 2`] = `
Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   1 passed, 1 total
Time:        <<REPLACED>>
Ran all test suites matching /snapshotEscapeSubstitution.test.js/i.
`;
